Allure reporting was added for cucumber 4 + test ng runner