@@ -7,88 +7,72 @@
     <groupId>org.example</groupId>
     <artifactId>GrowNext</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
     <build>
           <plugins>
-              <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-compiler-plugin</artifactId>
-                  <version>3.8.0</version>
-                  <configuration>
-                      <source>7</source>
-                      <target>7</target>
-                  </configuration>
-              </plugin>
-              <plugin>
+                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <version>3.0.0-M4</version>
-<!--                  <configuration>-->
-<!--                      <properties>-->
-<!--                          <property>-->
-<!--                              <name>dataproviderthreadcount</name>-->
-<!--                              <value>4</value>-->
-<!--                          </property>-->
-<!--                      </properties>-->
-<!--                  </configuration>-->
+                    <configuration>
+                        <systemProperties>
+                            <property>
+                                <name>allure.results.directory</name>
+                                <value>${project.build.directory}/allure-results</value>
+                            </property>
+                        </systemProperties>
+                        <includes>
+                            <include>**/runner.class</include>
+                        </includes>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.aspectj</groupId>
+                            <artifactId>aspectjweaver</artifactId>
+                            <version>1.9.5</version>
+                        </dependency>
+                    </dependencies>
+               </plugin>
+<!--           to generate allure report locally  use    mvn allure:serve-->
+              <plugin>
+                  <groupId>io.qameta.allure</groupId>
+                  <artifactId>allure-maven</artifactId>
+                  <version>2.10.0</version>
+                  <configuration>
+                      <reportVersion>2.7.0</reportVersion>
+                  </configuration>
+              </plugin>
 
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.8.1</version>
+                  <configuration>
+                      <source>1.8</source>
+                      <target>1.8</target>
+                  </configuration>
               </plugin>
           </plugins>
       </build>
 
-    <!-- Allure test results
-        <properties>
-           <aspectj.version>1.8.10</aspectj.version>
-       </properties>
 
-       <build>
-           <plugins>
-               <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-surefire-plugin</artifactId>
-                   <version>2.20</version>
-                   <configuration>
-                       <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                       <systemProperties>
-                           <property>
-                               <name>allure.results.directory</name>
-                               <value>${project.build.directory}/allure-results</value>
-                           </property>
-                       </systemProperties>
-                       <includes>
-                           <include>**/runner.class</include>
-                       </includes>
-                   </configuration>
-                   <dependencies>
-                       <dependency>
-                           <groupId>org.aspectj</groupId>
-                           <artifactId>aspectjweaver</artifactId>
-                           <version>1.9.5</version>
-                       </dependency>
-                   </dependencies>
-               </plugin>
 
-               <plugin>
-                   <groupId>io.qameta.allure</groupId>
-                   <artifactId>allure-maven</artifactId>
-                   <version>2.10.0</version>
-                   <configuration>
-                       <reportVersion>2.7.0</reportVersion>
-                   </configuration>
-               </plugin>
-               <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-compiler-plugin</artifactId>
-                   <version>3.8.0</version>
-                   <configuration>
-                       <source>7</source>
-                       <target>7</target>
-                   </configuration>
-               </plugin>
-           </plugins>
-       </build>
--->
 
        <dependencies>
+           <dependency>
+               <groupId>io.qameta.allure</groupId>
+               <artifactId>allure-testng</artifactId>
+               <version>2.13.1</version>
+               <scope>test</scope>
+           </dependency>
+
+           <dependency>
+               <groupId>io.qameta.allure</groupId>
+               <artifactId>allure-cucumber4-jvm</artifactId>
+               <version>2.13.1</version>
+           </dependency>
+
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
@@ -96,7 +80,7 @@
                <scope>test</scope>
            </dependency>
 
-           <!-- CUCUMBER -->
+        <!-- CUCUMBER -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
@@ -110,24 +94,11 @@
             <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
-
-           <!-- run in parallel
-              <dependency>
-                  <groupId>io.cucumber</groupId>
-                  <artifactId>cucumber-java</artifactId>
-                  <version>5.4.0</version>
-                  <scope>test</scope>
-              </dependency>-->
-
-
-
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
         </dependency>
-
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
@@ -146,27 +117,6 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber4-jvm
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-cucumber-jvm</artifactId>
-            <version>2.0-BETA6</version>
-        </dependency>
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-testng</artifactId>
-            <version>2.6.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.8.10</version>
-        </dependency>-->
-
-
-
     </dependencies>
-
 
 </project>
